--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Add to your HTML head -->
-    <title>PDF Viewer App</title>
+    <title>Rematiq - PDF Viewer App</title>
   </head>
   <body>
     <div id="root"></div>
